replace some usages of ContainerUtil.set() with immutable sets to get rid of unclear-semantic methods
GitOrigin-RevId: 3ba1266af01d64a228c10df59b18c4ac797c2a9b